[tool.poetry]
name = "neo-babix"
version = "0.1.0"
description = ""
authors = ["Batista Harahap <batista@bango29.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiodns = "^2.0.0"
aiohttp = "^3.8.1"
APScheduler = "^3.7.0"
async-timeout = "^4.0.2"
attrs = "^20.3.0"
ccxt = "^1.91.85"
certifi = "^2020.12.5"
cffi = "^1.14.5"
chardet = "^4.0.0"
cryptography = "^3.4.7"
multidict = "^5.1.0"
numpy = "^1.22.0"
pandas = "^1.2.4"
pycares = "^4.2.0"
pycparser = "^2.20"
python-dateutil = "^2.8.1"
pytz = "^2021.1"
requests = "^2.25.1"
six = "^1.15.0"
TA-Lib = "^0.4.24"
telepot = "^12.7"
tzlocal = "^2.1"
urllib3 = "^1.26.5"
uvloop = "^0.16.0"
yarl = "^1.6.3"
pydantic = "^1.8.2"
pyfunctional = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
